<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#271d5d"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.anhtuan.myapplication.view.DangNhap">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imgb_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#271d5d"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/drawer" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/besttrip"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/best_trip_with_us"
            android:textAlignment="center"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/tv_singup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="#b5b5b7" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_input_dangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_input" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:drawableStart="@drawable/fb"
                android:paddingStart="20dp"
                tools:ignore="ButtonStyle,RtlSymmetry" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="6"
                android:background="#ffffff"
                android:text="@string/login_with_email"
                android:textAllCaps="false"
                android:textColor="#090349"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot_password_dangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>
